# auth-gates

./: Cargo.toml  LICENSE  README.md
docs/: AEGIS.md  ENGINE.md  FUZZER_AND_WS.md  MODELS.md  README.md  SERVER.md  analyzer.md  discovery.md  models.md
src/: engine.rs  fuzzer.rs  html_report.rs  lib.rs  models.rs  server.rs  ws_discovery.rs
src/aegis/: fingerprint.rs  geo_logic.rs  mod.rs  session_manager.rs
tests/: test_aegis.rs  test_engine.rs  test_fuzzer.rs  test_models.rs
