[package]
name = "qicro-auth-gates"
version = "0.1.0"
edition = "2021"
description = "Advanced telemetry, rate limit analysis, and security testing crate designed for Qicro."
license = "MIT"

[features]
default = []
# Exposes the Axum REST & WebSocket telemetry server 
server = ["dep:axum", "dep:tower-http"]

[dependencies]
# Core Engine
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-native-roots"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
colored = "2.0"
futures-util = "0.3"
url = "2.4"
base64 = "0.21"
http = "0.2"
tokio-stream = "0.1"

# Telemetry Server (Feature Gated)
axum = { version = "0.6", features = ["ws", "macros"], optional = true }
tower-http = { version = "0.4", features = ["cors"], optional = true }
